--- a/app quản lý hs/index.html
+++ b/app quản lý hs/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <div id="box-main-content">
@@ -15,11 +15,11 @@
             </div>
             <div class="box-form">
                 <h3>Gender</h3>
-                <input type="radio" class="input-dot" id="nam" name="Gender">
+                <input type="radio" class="input-dot" id="nam" name="Gender" value="nam">
                 <label>Nam</label>
                 <br>
                 <br>
-                <input type="radio" class="input-dot" id="nu" name="Gender">
+                <input type="radio" class="input-dot" id="nu" name="Gender" value="nu">
                 <label>Nữ</label>
             </div>
             <div class="box-form">
